// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "05d7070c2d96047692cf169e9724a43fc35c2b4df6df804c95d7a244755b3578",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "eb1ab814ef36497ff3c75e46c278c58b79498e64aa2ca7873de40da16ad39499",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "56c109771e2754b2c03a707b52eee3d9dc91153b33dcb49f61896c1c07890f53",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "5ff8e2b83a87fee6879d62e8efdf66bae5aa53092e796493469c4fd917f5bba9",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "0a382374c929d7a96ec49c4e7288823949b5ba7bb53c3030ebba54aa03788034",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "2c6440c36303d8a008897cedb8a9304e59f31273176795b3c92ca448c5327c9f",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "18a9b3d72d77566b753c445164078efaf42767f65cf42a4f2d0bb855b09655ce",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "a9b6f8459435865f2419194b7a02274553f4afd17ff8cb44e26c25eeb56a01da",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "389b290292749b26f7ed35e19e23f9fbd1f2ca38141b6eace9e94a0b06b60ef3",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "e67b888f186de0a3b20b7f0780a40c5fd5abedabcf7067fe6141a53f42630a60",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "a809672a327019793a192dcc3f1d3016e9bc17d45a2ca34d39c88d62196d7dc3",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "dd7c124b025c7a9440ec20aab38abd70765603d9803226dd62791a92f1a2051a",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "2f6bc98ed7b1383e420dfd56819d3ef45b11390cc1d1544a224b425c6dc94d38",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "cfa8ce5db0a6479fd6055ac4380763bbc3ca135363875674d9e687cbb6ba3eef",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;

